--- a/src/Css/form.css
+++ b/src/Css/form.css
@@ -24,3 +24,7 @@ input{
     width:100px;
     letter-spacing: 2px;
 }
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
